--- a/src/pages/page.scss
+++ b/src/pages/page.scss
@@ -75,3 +75,14 @@
   font-size: 0.85rem;
   color: #c4925c;
 }
+
+/* Ẩn nút tăng/giảm của input type="number" */
+.custom-number-input::-webkit-inner-spin-button,
+.custom-number-input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.custom-number-input {
+  -moz-appearance: textfield; /* Ẩn trên Firefox */
+}
