--- a/src/components/component.scss
+++ b/src/components/component.scss
@@ -152,7 +152,7 @@
 /* Popup styling */
 .hover-popup-menu {
   z-index: 10;
-  width: 12rem; /* Adjust the width as needed */
+  width: 250px; /* Adjust the width as needed */
   padding: 0.5rem 0;
   background-color: #fff;
   border: 1px solid #e2e8f0; /* Tailwind's gray-200 */
