--- a/src/components/component.scss
+++ b/src/components/component.scss
@@ -185,3 +185,37 @@
 .hover-popup-menu button:hover {
   color: #8b4513; /* Custom brown-hover color */
 }
+
+
+// Search
+.popup-search {
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  max-height: 250px; 
+  overflow-y: auto;
+  max-width: 480px; 
+}
+
+.suggestions-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.suggestions-list li {
+  padding: 8px 16px;
+  cursor: pointer;
+  font-size: 14px;
+  color: #333;
+}
+
+.suggestions-list li:hover {
+  background-color: #f0f0f0;
+}
