--- a/src/pages/page.scss
+++ b/src/pages/page.scss
@@ -123,3 +123,31 @@
 .border-blue-0 {
   border: 1px solid #338dbc;
 }
+//dialog cart
+.cart-dialog::before {
+  content: "";
+  border-width: 30px 40px;
+  border-style: solid;
+  border-image: initial;
+  border-color: red;
+  position: absolute;
+  right: -26px;
+  top: 20px;
+  transform: translateY(-50%);
+  border-color: transparent transparent transparent transparent;
+}
+@keyframes growth {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.cart-dialog-animation {
+  transform-origin: 90% top;
+  animation: growth ease-in 0.3s;
+  will-change: opacity, transform;
+}
