--- a/src/pages/search.scss
+++ b/src/pages/search.scss
@@ -23,7 +23,7 @@ h2 {
   font-size: 2em;
 }
 .title_page_h2:hover {
-  color: #c49a6c;
+  color: #e17100;
   text-decoration: none;
   cursor: pointer;
 }
