--- a/src/components/component.scss
+++ b/src/components/component.scss
@@ -153,15 +153,15 @@
   pointer-events: auto;
 }
 
-/* Popup styling */
+
 .hover-popup-menu {
   z-index: 10;
-  width: 250px; /* Adjust the width as needed */
+  width: 250px; 
   padding: 0.5rem 0;
   background-color: #fff;
-  border: 1px solid #e2e8f0; /* Tailwind's gray-200 */
-  border-radius: 0.375rem; /* Tailwind's rounded-md */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06); /* Tailwind's shadow-lg */
+  border: 1px solid #e2e8f0;
+  border-radius: 0.375rem; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06); 
 }
 
 /* List item styles */
@@ -194,19 +194,20 @@
 // Search
 .popup-search {
   position: absolute;
-  top: calc(100% + 5px);
-  left: 0;
+  top: calc(45% + 5px);
+  left: 520px;
   right: 0;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 2000;
   max-height: 250px; 
   overflow-y: auto;
   max-width: 480px; 
   pointer-events: auto;
+  z-index: 9999 !important;
 }
+
 
 .suggestions-list {
   list-style: none;
